// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Produces expected result when endorsement not present 1`] = `
{
  "contained": [
    {
      "id": "requester",
      "organization": {
        "reference": "#organizationId",
      },
      "practitioner": {
        "display": "Ms Lottie Maifeld",
        "identifier": {
          "system": "https://fhir.hl7.org.uk/Id/gphc-number",
          "value": "7654321",
        },
      },
      "resourceType": "PractitionerRole",
      "telecom": [
        {
          "system": "phone",
          "use": "work",
          "value": "01234567890",
        },
      ],
    },
    {
      "active": true,
      "address": [
        {
          "city": "West Yorkshire",
          "line": [
            "17 Austhorpe Road",
            "Crossgates",
            "Leeds",
          ],
          "postalCode": "LS15 8BA",
          "use": "work",
        },
      ],
      "id": "organizationId",
      "identifier": [
        {
          "system": "https://fhir.nhs.uk/Id/ods-organization-code",
          "value": "FA565",
        },
      ],
      "name": "The Simple Pharmacy",
      "resourceType": "Organization",
      "telecom": [
        {
          "system": "phone",
          "use": "work",
          "value": "0113 3180277",
        },
      ],
      "type": [
        {
          "coding": [
            {
              "code": "182",
              "display": "PHARMACY",
              "system": "https://fhir.nhs.uk/CodeSystem/organisation-role",
            },
          ],
        },
      ],
    },
  ],
  "created": "2021-11-01T14:35:00.000Z",
  "extension": [
    {
      "url": "https://fhir.nhs.uk/StructureDefinition/Extension-Provenance-agent",
      "valueReference": {
        "display": "dummy full name",
        "identifier": {
          "system": "https://fhir.nhs.uk/Id/sds-role-profile-id",
          "value": "884562163557",
        },
      },
    },
  ],
  "identifier": [
    {
      "system": "https://tools.ietf.org/html/rfc4122",
      "value": "fb51061d-3808-4551-984d-4b25924cd15a",
    },
  ],
  "insurance": [
    {
      "coverage": {
        "display": "NHS BUSINESS SERVICES AUTHORITY",
        "identifier": {
          "system": "https://fhir.nhs.uk/Id/ods-organization-code",
          "value": "T1450",
        },
      },
      "focal": true,
      "sequence": 1,
    },
  ],
  "item": [
    {
      "detail": [
        {
          "extension": [
            {
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ClaimSequenceIdentifier",
              "valueIdentifier": {
                "system": "https://fhir.nhs.uk/Id/claim-sequence-identifier",
                "value": "fb51061d-3808-4551-984d-4b25924cd15a",
              },
            },
            {
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ClaimMedicationRequestReference",
              "valueReference": {
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                  "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
                },
              },
            },
            {
              "extension": [
                {
                  "url": "numberOfRepeatsIssued",
                  "valueInteger": 0,
                },
                {
                  "url": "numberOfRepeatsAllowed",
                  "valueInteger": 5,
                },
              ],
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
            },
          ],
          "modifier": [
            {
              "coding": [
                {
                  "code": "0001",
                  "display": "Item fully dispensed",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-type",
                },
              ],
            },
          ],
          "productOrService": {
            "coding": [
              {
                "code": "15517911000001104",
                "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                "system": "http://snomed.info/sct",
              },
            ],
          },
          "programCode": [
            {
              "coding": [
                {
                  "code": "paid-once",
                  "display": "Paid Once",
                  "system": "https://fhir.nhs.uk/CodeSystem/DM-prescription-charge",
                },
              ],
            },
          ],
          "quantity": {
            "code": "428673006",
            "system": "http://snomed.info/sct",
            "unit": "tablet",
            "value": 63,
          },
          "sequence": 1,
          "subDetail": [
            {
              "productOrService": {
                "coding": [
                  {
                    "code": "15517911000001104",
                    "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "quantity": {
                "code": "428673006",
                "system": "http://snomed.info/sct",
                "unit": "tablet",
                "value": 63,
              },
              "sequence": 1,
            },
          ],
        },
      ],
      "extension": [
        {
          "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-TaskBusinessStatus",
          "valueCoding": {
            "code": "0006",
            "display": "Dispensed",
            "system": "https://fhir.nhs.uk/CodeSystem/EPS-task-business-status",
          },
        },
      ],
      "productOrService": {
        "coding": [
          {
            "code": "16076005",
            "display": "Prescription",
            "system": "http://snomed.info/sct",
          },
        ],
      },
      "programCode": [
        {
          "coding": [
            {
              "code": "0001",
              "display": "Patient has paid appropriate charges",
              "system": "https://fhir.nhs.uk/CodeSystem/prescription-charge-exemption",
            },
          ],
        },
        {
          "coding": [
            {
              "code": "no-evidence-seen",
              "display": "No Evidence Seen",
              "system": "https://fhir.nhs.uk/CodeSystem/DM-exemption-evidence",
            },
          ],
        },
      ],
      "sequence": 1,
    },
  ],
  "patient": {
    "identifier": {
      "system": "https://fhir.nhs.uk/Id/nhs-number",
      "value": "9449305552",
    },
  },
  "payee": {
    "party": {
      "reference": "#organizationId",
    },
    "type": {
      "coding": [
        {
          "code": "provider",
          "display": "Provider",
          "system": "http://terminology.hl7.org/CodeSystem/payeetype",
        },
      ],
    },
  },
  "prescription": {
    "extension": [
      {
        "extension": [
          {
            "url": "shortForm",
            "valueIdentifier": {
              "system": "https://fhir.nhs.uk/Id/prescription-order-number",
              "value": "B407F7-A99968-4DB2AU",
            },
          },
          {
            "url": "UUID",
            "valueIdentifier": {
              "system": "https://fhir.nhs.uk/Id/prescription",
              "value": "10d37820-dda2-4810-94d7-c79e5fdb4b46",
            },
          },
        ],
        "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-GroupIdentifier",
      },
    ],
  },
  "priority": {
    "coding": [
      {
        "code": "normal",
        "system": "http://terminology.hl7.org/CodeSystem/processpriority",
      },
    ],
  },
  "provider": {
    "reference": "#requester",
  },
  "resourceType": "Claim",
  "status": "active",
  "type": {
    "coding": [
      {
        "code": "pharmacy",
        "display": "Pharmacy",
        "system": "http://terminology.hl7.org/CodeSystem/claim-type",
      },
    ],
  },
  "use": "claim",
}
`;

exports[`Produces expected result when multiple endorsements present 1`] = `
{
  "contained": [
    {
      "id": "requester",
      "organization": {
        "reference": "#organizationId",
      },
      "practitioner": {
        "display": "Ms Lottie Maifeld",
        "identifier": {
          "system": "https://fhir.hl7.org.uk/Id/gphc-number",
          "value": "7654321",
        },
      },
      "resourceType": "PractitionerRole",
      "telecom": [
        {
          "system": "phone",
          "use": "work",
          "value": "01234567890",
        },
      ],
    },
    {
      "active": true,
      "address": [
        {
          "city": "West Yorkshire",
          "line": [
            "17 Austhorpe Road",
            "Crossgates",
            "Leeds",
          ],
          "postalCode": "LS15 8BA",
          "use": "work",
        },
      ],
      "id": "organizationId",
      "identifier": [
        {
          "system": "https://fhir.nhs.uk/Id/ods-organization-code",
          "value": "FA565",
        },
      ],
      "name": "The Simple Pharmacy",
      "resourceType": "Organization",
      "telecom": [
        {
          "system": "phone",
          "use": "work",
          "value": "0113 3180277",
        },
      ],
      "type": [
        {
          "coding": [
            {
              "code": "182",
              "display": "PHARMACY",
              "system": "https://fhir.nhs.uk/CodeSystem/organisation-role",
            },
          ],
        },
      ],
    },
  ],
  "created": "2021-11-01T14:35:00.000Z",
  "extension": [
    {
      "url": "https://fhir.nhs.uk/StructureDefinition/Extension-Provenance-agent",
      "valueReference": {
        "display": "dummy full name",
        "identifier": {
          "system": "https://fhir.nhs.uk/Id/sds-role-profile-id",
          "value": "884562163557",
        },
      },
    },
  ],
  "identifier": [
    {
      "system": "https://tools.ietf.org/html/rfc4122",
      "value": "fb51061d-3808-4551-984d-4b25924cd15a",
    },
  ],
  "insurance": [
    {
      "coverage": {
        "display": "NHS BUSINESS SERVICES AUTHORITY",
        "identifier": {
          "system": "https://fhir.nhs.uk/Id/ods-organization-code",
          "value": "T1450",
        },
      },
      "focal": true,
      "sequence": 1,
    },
  ],
  "item": [
    {
      "detail": [
        {
          "extension": [
            {
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ClaimSequenceIdentifier",
              "valueIdentifier": {
                "system": "https://fhir.nhs.uk/Id/claim-sequence-identifier",
                "value": "fb51061d-3808-4551-984d-4b25924cd15a",
              },
            },
            {
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ClaimMedicationRequestReference",
              "valueReference": {
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                  "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
                },
              },
            },
            {
              "extension": [
                {
                  "url": "numberOfRepeatsIssued",
                  "valueInteger": 0,
                },
                {
                  "url": "numberOfRepeatsAllowed",
                  "valueInteger": 5,
                },
              ],
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
            },
          ],
          "modifier": [
            {
              "coding": [
                {
                  "code": "0001",
                  "display": "Item fully dispensed",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-type",
                },
              ],
            },
          ],
          "productOrService": {
            "coding": [
              {
                "code": "15517911000001104",
                "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                "system": "http://snomed.info/sct",
              },
            ],
          },
          "programCode": [
            {
              "coding": [
                {
                  "code": "BB",
                  "display": "Broken Bulk",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-endorsement",
                },
              ],
            },
            {
              "coding": [
                {
                  "code": "IP",
                  "display": "Invoice Price for less common products or special items",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-endorsement",
                },
              ],
              "text": "£210.91,100ml,Specials Ltd,Lic12345678,BN12345678",
            },
            {
              "coding": [
                {
                  "code": "paid-once",
                  "display": "Paid Once",
                  "system": "https://fhir.nhs.uk/CodeSystem/DM-prescription-charge",
                },
              ],
            },
          ],
          "quantity": {
            "code": "428673006",
            "system": "http://snomed.info/sct",
            "unit": "tablet",
            "value": 63,
          },
          "sequence": 1,
          "subDetail": [
            {
              "productOrService": {
                "coding": [
                  {
                    "code": "15517911000001104",
                    "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "quantity": {
                "code": "428673006",
                "system": "http://snomed.info/sct",
                "unit": "tablet",
                "value": 63,
              },
              "sequence": 1,
            },
          ],
        },
      ],
      "extension": [
        {
          "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-TaskBusinessStatus",
          "valueCoding": {
            "code": "0006",
            "display": "Dispensed",
            "system": "https://fhir.nhs.uk/CodeSystem/EPS-task-business-status",
          },
        },
      ],
      "productOrService": {
        "coding": [
          {
            "code": "16076005",
            "display": "Prescription",
            "system": "http://snomed.info/sct",
          },
        ],
      },
      "programCode": [
        {
          "coding": [
            {
              "code": "0001",
              "display": "Patient has paid appropriate charges",
              "system": "https://fhir.nhs.uk/CodeSystem/prescription-charge-exemption",
            },
          ],
        },
        {
          "coding": [
            {
              "code": "no-evidence-seen",
              "display": "No Evidence Seen",
              "system": "https://fhir.nhs.uk/CodeSystem/DM-exemption-evidence",
            },
          ],
        },
      ],
      "sequence": 1,
    },
  ],
  "patient": {
    "identifier": {
      "system": "https://fhir.nhs.uk/Id/nhs-number",
      "value": "9449305552",
    },
  },
  "payee": {
    "party": {
      "reference": "#organizationId",
    },
    "type": {
      "coding": [
        {
          "code": "provider",
          "display": "Provider",
          "system": "http://terminology.hl7.org/CodeSystem/payeetype",
        },
      ],
    },
  },
  "prescription": {
    "extension": [
      {
        "extension": [
          {
            "url": "shortForm",
            "valueIdentifier": {
              "system": "https://fhir.nhs.uk/Id/prescription-order-number",
              "value": "B407F7-A99968-4DB2AU",
            },
          },
          {
            "url": "UUID",
            "valueIdentifier": {
              "system": "https://fhir.nhs.uk/Id/prescription",
              "value": "10d37820-dda2-4810-94d7-c79e5fdb4b46",
            },
          },
        ],
        "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-GroupIdentifier",
      },
    ],
  },
  "priority": {
    "coding": [
      {
        "code": "normal",
        "system": "http://terminology.hl7.org/CodeSystem/processpriority",
      },
    ],
  },
  "provider": {
    "reference": "#requester",
  },
  "resourceType": "Claim",
  "status": "active",
  "type": {
    "coding": [
      {
        "code": "pharmacy",
        "display": "Pharmacy",
        "system": "http://terminology.hl7.org/CodeSystem/claim-type",
      },
    ],
  },
  "use": "claim",
}
`;

exports[`Produces expected result when non-default exemption code selected 1`] = `
{
  "contained": [
    {
      "id": "requester",
      "organization": {
        "reference": "#organizationId",
      },
      "practitioner": {
        "display": "Ms Lottie Maifeld",
        "identifier": {
          "system": "https://fhir.hl7.org.uk/Id/gphc-number",
          "value": "7654321",
        },
      },
      "resourceType": "PractitionerRole",
      "telecom": [
        {
          "system": "phone",
          "use": "work",
          "value": "01234567890",
        },
      ],
    },
    {
      "active": true,
      "address": [
        {
          "city": "West Yorkshire",
          "line": [
            "17 Austhorpe Road",
            "Crossgates",
            "Leeds",
          ],
          "postalCode": "LS15 8BA",
          "use": "work",
        },
      ],
      "id": "organizationId",
      "identifier": [
        {
          "system": "https://fhir.nhs.uk/Id/ods-organization-code",
          "value": "FA565",
        },
      ],
      "name": "The Simple Pharmacy",
      "resourceType": "Organization",
      "telecom": [
        {
          "system": "phone",
          "use": "work",
          "value": "0113 3180277",
        },
      ],
      "type": [
        {
          "coding": [
            {
              "code": "182",
              "display": "PHARMACY",
              "system": "https://fhir.nhs.uk/CodeSystem/organisation-role",
            },
          ],
        },
      ],
    },
  ],
  "created": "2021-11-01T14:35:00.000Z",
  "extension": [
    {
      "url": "https://fhir.nhs.uk/StructureDefinition/Extension-Provenance-agent",
      "valueReference": {
        "display": "dummy full name",
        "identifier": {
          "system": "https://fhir.nhs.uk/Id/sds-role-profile-id",
          "value": "884562163557",
        },
      },
    },
  ],
  "identifier": [
    {
      "system": "https://tools.ietf.org/html/rfc4122",
      "value": "fb51061d-3808-4551-984d-4b25924cd15a",
    },
  ],
  "insurance": [
    {
      "coverage": {
        "display": "NHS BUSINESS SERVICES AUTHORITY",
        "identifier": {
          "system": "https://fhir.nhs.uk/Id/ods-organization-code",
          "value": "T1450",
        },
      },
      "focal": true,
      "sequence": 1,
    },
  ],
  "item": [
    {
      "detail": [
        {
          "extension": [
            {
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ClaimSequenceIdentifier",
              "valueIdentifier": {
                "system": "https://fhir.nhs.uk/Id/claim-sequence-identifier",
                "value": "fb51061d-3808-4551-984d-4b25924cd15a",
              },
            },
            {
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ClaimMedicationRequestReference",
              "valueReference": {
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                  "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
                },
              },
            },
            {
              "extension": [
                {
                  "url": "numberOfRepeatsIssued",
                  "valueInteger": 0,
                },
                {
                  "url": "numberOfRepeatsAllowed",
                  "valueInteger": 5,
                },
              ],
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
            },
          ],
          "modifier": [
            {
              "coding": [
                {
                  "code": "0001",
                  "display": "Item fully dispensed",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-type",
                },
              ],
            },
          ],
          "productOrService": {
            "coding": [
              {
                "code": "15517911000001104",
                "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                "system": "http://snomed.info/sct",
              },
            ],
          },
          "programCode": [
            {
              "coding": [
                {
                  "code": "not-paid",
                  "display": "Not Paid",
                  "system": "https://fhir.nhs.uk/CodeSystem/DM-prescription-charge",
                },
              ],
            },
          ],
          "quantity": {
            "code": "428673006",
            "system": "http://snomed.info/sct",
            "unit": "tablet",
            "value": 63,
          },
          "sequence": 1,
          "subDetail": [
            {
              "productOrService": {
                "coding": [
                  {
                    "code": "15517911000001104",
                    "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "quantity": {
                "code": "428673006",
                "system": "http://snomed.info/sct",
                "unit": "tablet",
                "value": 63,
              },
              "sequence": 1,
            },
          ],
        },
      ],
      "extension": [
        {
          "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-TaskBusinessStatus",
          "valueCoding": {
            "code": "0006",
            "display": "Dispensed",
            "system": "https://fhir.nhs.uk/CodeSystem/EPS-task-business-status",
          },
        },
      ],
      "productOrService": {
        "coding": [
          {
            "code": "16076005",
            "display": "Prescription",
            "system": "http://snomed.info/sct",
          },
        ],
      },
      "programCode": [
        {
          "coding": [
            {
              "code": "0005",
              "display": "has a valid maternity exemption certificate",
              "system": "https://fhir.nhs.uk/CodeSystem/prescription-charge-exemption",
            },
          ],
        },
        {
          "coding": [
            {
              "code": "evidence-seen",
              "display": "Evidence Seen",
              "system": "https://fhir.nhs.uk/CodeSystem/DM-exemption-evidence",
            },
          ],
        },
      ],
      "sequence": 1,
    },
  ],
  "patient": {
    "identifier": {
      "system": "https://fhir.nhs.uk/Id/nhs-number",
      "value": "9449305552",
    },
  },
  "payee": {
    "party": {
      "reference": "#organizationId",
    },
    "type": {
      "coding": [
        {
          "code": "provider",
          "display": "Provider",
          "system": "http://terminology.hl7.org/CodeSystem/payeetype",
        },
      ],
    },
  },
  "prescription": {
    "extension": [
      {
        "extension": [
          {
            "url": "shortForm",
            "valueIdentifier": {
              "system": "https://fhir.nhs.uk/Id/prescription-order-number",
              "value": "B407F7-A99968-4DB2AU",
            },
          },
          {
            "url": "UUID",
            "valueIdentifier": {
              "system": "https://fhir.nhs.uk/Id/prescription",
              "value": "10d37820-dda2-4810-94d7-c79e5fdb4b46",
            },
          },
        ],
        "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-GroupIdentifier",
      },
    ],
  },
  "priority": {
    "coding": [
      {
        "code": "normal",
        "system": "http://terminology.hl7.org/CodeSystem/processpriority",
      },
    ],
  },
  "provider": {
    "reference": "#requester",
  },
  "resourceType": "Claim",
  "status": "active",
  "type": {
    "coding": [
      {
        "code": "pharmacy",
        "display": "Pharmacy",
        "system": "http://terminology.hl7.org/CodeSystem/claim-type",
      },
    ],
  },
  "use": "claim",
}
`;

exports[`Produces expected result when single endorsement present 1`] = `
{
  "contained": [
    {
      "id": "requester",
      "organization": {
        "reference": "#organizationId",
      },
      "practitioner": {
        "display": "Ms Lottie Maifeld",
        "identifier": {
          "system": "https://fhir.hl7.org.uk/Id/gphc-number",
          "value": "7654321",
        },
      },
      "resourceType": "PractitionerRole",
      "telecom": [
        {
          "system": "phone",
          "use": "work",
          "value": "01234567890",
        },
      ],
    },
    {
      "active": true,
      "address": [
        {
          "city": "West Yorkshire",
          "line": [
            "17 Austhorpe Road",
            "Crossgates",
            "Leeds",
          ],
          "postalCode": "LS15 8BA",
          "use": "work",
        },
      ],
      "id": "organizationId",
      "identifier": [
        {
          "system": "https://fhir.nhs.uk/Id/ods-organization-code",
          "value": "FA565",
        },
      ],
      "name": "The Simple Pharmacy",
      "resourceType": "Organization",
      "telecom": [
        {
          "system": "phone",
          "use": "work",
          "value": "0113 3180277",
        },
      ],
      "type": [
        {
          "coding": [
            {
              "code": "182",
              "display": "PHARMACY",
              "system": "https://fhir.nhs.uk/CodeSystem/organisation-role",
            },
          ],
        },
      ],
    },
  ],
  "created": "2021-11-01T14:35:00.000Z",
  "extension": [
    {
      "url": "https://fhir.nhs.uk/StructureDefinition/Extension-Provenance-agent",
      "valueReference": {
        "display": "dummy full name",
        "identifier": {
          "system": "https://fhir.nhs.uk/Id/sds-role-profile-id",
          "value": "884562163557",
        },
      },
    },
  ],
  "identifier": [
    {
      "system": "https://tools.ietf.org/html/rfc4122",
      "value": "fb51061d-3808-4551-984d-4b25924cd15a",
    },
  ],
  "insurance": [
    {
      "coverage": {
        "display": "NHS BUSINESS SERVICES AUTHORITY",
        "identifier": {
          "system": "https://fhir.nhs.uk/Id/ods-organization-code",
          "value": "T1450",
        },
      },
      "focal": true,
      "sequence": 1,
    },
  ],
  "item": [
    {
      "detail": [
        {
          "extension": [
            {
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ClaimSequenceIdentifier",
              "valueIdentifier": {
                "system": "https://fhir.nhs.uk/Id/claim-sequence-identifier",
                "value": "fb51061d-3808-4551-984d-4b25924cd15a",
              },
            },
            {
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ClaimMedicationRequestReference",
              "valueReference": {
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                  "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
                },
              },
            },
            {
              "extension": [
                {
                  "url": "numberOfRepeatsIssued",
                  "valueInteger": 0,
                },
                {
                  "url": "numberOfRepeatsAllowed",
                  "valueInteger": 5,
                },
              ],
              "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
            },
          ],
          "modifier": [
            {
              "coding": [
                {
                  "code": "0001",
                  "display": "Item fully dispensed",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-type",
                },
              ],
            },
          ],
          "productOrService": {
            "coding": [
              {
                "code": "15517911000001104",
                "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                "system": "http://snomed.info/sct",
              },
            ],
          },
          "programCode": [
            {
              "coding": [
                {
                  "code": "IP",
                  "display": "Invoice Price for less common products or special items",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-endorsement",
                },
              ],
              "text": "£210.91,100ml,Specials Ltd,Lic12345678,BN12345678",
            },
            {
              "coding": [
                {
                  "code": "paid-once",
                  "display": "Paid Once",
                  "system": "https://fhir.nhs.uk/CodeSystem/DM-prescription-charge",
                },
              ],
            },
          ],
          "quantity": {
            "code": "428673006",
            "system": "http://snomed.info/sct",
            "unit": "tablet",
            "value": 63,
          },
          "sequence": 1,
          "subDetail": [
            {
              "productOrService": {
                "coding": [
                  {
                    "code": "15517911000001104",
                    "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "quantity": {
                "code": "428673006",
                "system": "http://snomed.info/sct",
                "unit": "tablet",
                "value": 63,
              },
              "sequence": 1,
            },
          ],
        },
      ],
      "extension": [
        {
          "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-TaskBusinessStatus",
          "valueCoding": {
            "code": "0006",
            "display": "Dispensed",
            "system": "https://fhir.nhs.uk/CodeSystem/EPS-task-business-status",
          },
        },
      ],
      "productOrService": {
        "coding": [
          {
            "code": "16076005",
            "display": "Prescription",
            "system": "http://snomed.info/sct",
          },
        ],
      },
      "programCode": [
        {
          "coding": [
            {
              "code": "0001",
              "display": "Patient has paid appropriate charges",
              "system": "https://fhir.nhs.uk/CodeSystem/prescription-charge-exemption",
            },
          ],
        },
        {
          "coding": [
            {
              "code": "no-evidence-seen",
              "display": "No Evidence Seen",
              "system": "https://fhir.nhs.uk/CodeSystem/DM-exemption-evidence",
            },
          ],
        },
      ],
      "sequence": 1,
    },
  ],
  "patient": {
    "identifier": {
      "system": "https://fhir.nhs.uk/Id/nhs-number",
      "value": "9449305552",
    },
  },
  "payee": {
    "party": {
      "reference": "#organizationId",
    },
    "type": {
      "coding": [
        {
          "code": "provider",
          "display": "Provider",
          "system": "http://terminology.hl7.org/CodeSystem/payeetype",
        },
      ],
    },
  },
  "prescription": {
    "extension": [
      {
        "extension": [
          {
            "url": "shortForm",
            "valueIdentifier": {
              "system": "https://fhir.nhs.uk/Id/prescription-order-number",
              "value": "B407F7-A99968-4DB2AU",
            },
          },
          {
            "url": "UUID",
            "valueIdentifier": {
              "system": "https://fhir.nhs.uk/Id/prescription",
              "value": "10d37820-dda2-4810-94d7-c79e5fdb4b46",
            },
          },
        ],
        "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-GroupIdentifier",
      },
    ],
  },
  "priority": {
    "coding": [
      {
        "code": "normal",
        "system": "http://terminology.hl7.org/CodeSystem/processpriority",
      },
    ],
  },
  "provider": {
    "reference": "#requester",
  },
  "resourceType": "Claim",
  "status": "active",
  "type": {
    "coding": [
      {
        "code": "pharmacy",
        "display": "Pharmacy",
        "system": "http://terminology.hl7.org/CodeSystem/claim-type",
      },
    ],
  },
  "use": "claim",
}
`;
